Reading keystore from classpath so it can be used in the Netty subsystem

--- a/server-netty/pom.xml
+++ b/server-netty/pom.xml
@@ -121,11 +121,7 @@
                     </arguments>
                     <systemProperties>
                         <systemProperty>
-                            <key>keystore.file.path</key>
-                            <value>${basedir}/src/test/resources/simplepush.keystore</value>
-                        </systemProperty>
-                        <systemProperty>
-                            <key>keystore.file.password</key>
+                            <key>simplepush.keystore.password</key>
                             <value>simplepush</value>
                         </systemProperty>
                         <!--
