--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <properties>
         <version.io.netty>4.0.5.Final-SNAPSHOT</version.io.netty>
         <version.jackson>1.9.2</version.jackson>
+        <version.commons.codec>1.8</version.commons.codec>
     </properties>
 
     <modules>
@@ -84,6 +85,11 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
                 <version>1.7.5</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>${version.commons.codec}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
