--- a/server-vertx/src/main/resources/config.json
+++ b/server-vertx/src/main/resources/config.json
@@ -3,5 +3,6 @@
     "host" : "localhost",
     "userAgentReaperTimeout" : 604800000,
     "ackInterval" : 60000,
-    "endpointUrlPrefix" : "/endpoint"
+    "endpointUrlPrefix" : "/update",
+    "tokenKey" : "changeMe!"
 }
