--- a/wildfly-module/pom.xml
+++ b/wildfly-module/pom.xml
@@ -118,7 +118,8 @@
                                                 aerogear-simplepush-server-core, 
                                                 aerogear-simplepush-server-netty,
                                                 jackson-core-asl,
-                                                jackson-mapper-asl
+                                                jackson-mapper-asl,
+                                                commons-codec
                             </includeArtifactIds>
                         </configuration>
                     </execution>
