--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - cd ..
   - git clone git://github.com/danbev/netty-subsystem.git
   - cd netty-subsystem
-  - git checkout -b tmp ci
+  - git checkout -b tmp 0.8.0_CI
   - ../apache-maven-3.0.5/bin/mvn install -DskipTests --quiet
   - cd ..
 
