Adding endpointTls configuration option to SimplePush Subsystem.

--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -9,3 +9,4 @@ simplepush.server.factory-class=SimplePush ServerBootstrap factory attribute
 simplepush.server.thread-factory=The thread-factory to be used by Netty
 simplepush.server.datasource-jndi-name=An optional datasource JNDI name that a service can depend on
 simplepush.server.token-key=An token key used for encryption/decryption
+simplepush.server.endpoint-tls=Enables/disables https for notification endpoints
