--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -4,8 +4,10 @@ simplepush.remove=Operation Removes SimplePush subsystem
 simplepush.server=SimplePush Server type
 simplepush.server.add=Operation Adds SimplePush server 
 simplepush.server.remove=Operation Removes SimplePush server 
+simplepush.server.name=The name of the server. Used when multiple servers are configured.
 simplepush.server.socket-binding=Socket binding attribute for SimplePush server
 simplepush.server.datasource-jndi-name=An optional datasource JNDI name that a service can depend on
 simplepush.server.token-key=An token key used for encryption/decryption
 simplepush.server.endpoint-tls=Enables/disables https for notification endpoints
 simplepush.server.useragent-reaper-timeout=Sets the amount of time which a UserAgent can be inactive after which it will be removed from the system
+simplepush.server.notification-prefix=The prefix for the the notification endpoint url
