Renaming endpoint-tls -> notification-tls.

--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -8,6 +8,6 @@ simplepush.server.name=The name of the server. Used when multiple servers are co
 simplepush.server.socket-binding=Socket binding attribute for SimplePush server
 simplepush.server.datasource-jndi-name=An optional datasource JNDI name that a service can depend on
 simplepush.server.token-key=An token key used for encryption/decryption
-simplepush.server.endpoint-tls=Enables/disables https for notification endpoints
 simplepush.server.useragent-reaper-timeout=Sets the amount of time which a UserAgent can be inactive after which it will be removed from the system
 simplepush.server.notification-prefix=The prefix for the the notification endpoint url
+simplepush.server.notification-tls=Determines is transport layer security should be used for notification endpoints (https)
