Adding notification-ack-interval.

--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -11,3 +11,4 @@ simplepush.server.token-key=An token key used for encryption/decryption
 simplepush.server.useragent-reaper-timeout=Sets the amount of time which a UserAgent can be inactive after which it will be removed from the system
 simplepush.server.notification-prefix=The prefix for the the notification endpoint url
 simplepush.server.notification-tls=Determines is transport layer security should be used for notification endpoints (https)
+simplepush.server.notification-ack-interval=The interval time in milliseconds for resending un-acknowledged notifications.
