--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -12,3 +12,4 @@ simplepush.server.useragent-reaper-timeout=Sets the amount of time which a UserA
 simplepush.server.notification-prefix=The prefix for the the notification endpoint url
 simplepush.server.notification-tls=Determines is transport layer security should be used for notification endpoints (https)
 simplepush.server.notification-ack-interval=The interval time in milliseconds for resending un-acknowledged notifications.
+simplepush.server.notification-host=This option allows for specifying the host, ip-address or host name, of the endpointUrl that is returned when a UserAgent registers a channel
