--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -14,3 +14,4 @@ simplepush.server.notification-tls=Determines is transport layer security should
 simplepush.server.notification-ack-interval=The interval time in milliseconds for resending un-acknowledged notifications.
 simplepush.server.notification-host=This option allows for specifying the host, ip-address or host name, of the endpointUrl that is returned when a UserAgent registers a channel
 simplepush.server.notification-port=This option allows for specifying the port of the endpointUrl that is returned when a UserAgent/client registers a channel
+simplepush.server.sockjs-prefix=The prefix/name, of the SockJS service
