Adding sockjs-session-timeout.

--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -17,3 +17,4 @@ simplepush.server.notification-port=This option allows for specifying the port o
 simplepush.server.sockjs-prefix=The prefix/name, of the SockJS service
 simplepush.server.sockjs-cookies-needed=This is used by some load balancers to enable session stickyness
 simplepush.server.sockjs-url=The url to the sock-js-version.json. This is used by the 'iframe' protocol and the url is replaced in the script returned to the client 
+simplepush.server.sockjs-session-timeout=A timeout for inactive sessions
