--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -19,3 +19,4 @@ simplepush.server.sockjs-cookies-needed=This is used by some load balancers to e
 simplepush.server.sockjs-url=The url to the sock-js-version.json. This is used by the 'iframe' protocol and the url is replaced in the script returned to the client 
 simplepush.server.sockjs-session-timeout=A timeout for inactive sessions
 simplepush.server.sockjs-heartbeat-interval=The heartbeat interval for streaming transports in SockJS.
+simplepush.server.sockjs-max-streaming-bytes-size=The max number of types that a streaming transport protocol should allow to be returned before closing the connection, forcing the client to reconnect 
