--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -20,3 +20,4 @@ simplepush.server.sockjs-url=The url to the sock-js-version.json. This is used b
 simplepush.server.sockjs-session-timeout=A timeout for inactive sessions
 simplepush.server.sockjs-heartbeat-interval=The heartbeat interval for streaming transports in SockJS.
 simplepush.server.sockjs-max-streaming-bytes-size=The max number of types that a streaming transport protocol should allow to be returned before closing the connection, forcing the client to reconnect 
+simplepush.server.sockjs-tls=Specified whether Transport Layer Security (TLS) should be used by the SockJS layer
