Adding sockjs-websocket-protocols.

--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -23,3 +23,4 @@ simplepush.server.sockjs-max-streaming-bytes-size=The max number of types that a
 simplepush.server.sockjs-tls=Specified whether Transport Layer Security (TLS) should be used by the SockJS server
 simplepush.server.sockjs-enable-websocket=Enables/Disables WebSocket support for the SockJS server
 simplepush.server.sockjs-websocket-heartbeat-interval=A heartbeat-interval for WebSockets. This interval is separate from the normal SockJS heartbeat-interval and might be required in certain environments where idle connection are closed by a proxy. It is a separate value from the hearbeat that the streaming protocols use as it is often desirable to have a much larger value for it
+simplepush.server.sockjs-websocket-protocols=Specifies protocols which will be returned to during the Http upgrade request as the header 'WebSocket-Protocol'. This is only used with raw WebSockets ad the SockJS protocol does not support protocols to be specified by the client yet
