--- a/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
+++ b/wildfly-module/src/main/resources/org/jboss/aerogear/simplepush/subsystem/LocalDescriptions.properties
@@ -12,8 +12,7 @@ simplepush.server.useragent-reaper-timeout=Sets the amount of time which a UserA
 simplepush.server.notification-prefix=The prefix for the the notification endpoint url
 simplepush.server.notification-tls=Determines is transport layer security should be used for notification endpoints (https)
 simplepush.server.notification-ack-interval=The interval time in milliseconds for resending un-acknowledged notifications.
-simplepush.server.notification-host=This option allows for specifying the host, ip-address or host name, of the endpointUrl that is returned when a UserAgent registers a channel
-simplepush.server.notification-port=This option allows for specifying the port of the endpointUrl that is returned when a UserAgent/client registers a channel
+simplepush.server.notification-socket-binding=A reference to an outbound-socket-binding
 simplepush.server.sockjs-prefix=The prefix/name, of the SockJS service
 simplepush.server.sockjs-cookies-needed=This is used by some load balancers to enable session stickyness
 simplepush.server.sockjs-url=The url to the sock-js-version.json. This is used by the 'iframe' protocol and the url is replaced in the script returned to the client 
